// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayGrid should render a ClayGrid with all kind items 1`] = `
<div>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CL</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 1">User Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">MC</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 2">User Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CM</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 3">User Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with all kind items and title 1`] = `
<div>
  <h4 class="card-section-header">All Items</h4>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 1">File Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 2">File Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 3">File Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 1">Folder 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 2">Folder 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 3">Folder 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 1" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 1">Image Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 2" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 2">Image Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 3" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 3">Image Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CL</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 1">User Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">MC</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 2">User Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CM</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 3">User Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with classes 1`] = `
<div class="my-custom-class">
  <ul class="card-page"></ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with file items 1`] = `
<div>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 1">File Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 2">File Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 3">File Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with file items and title 1`] = `
<div>
  <h4 class="card-section-header">File Items</h4>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 1">File Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 2">File Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card file-card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <title>documents-and-media</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="File Item 3">File Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with folder items 1`] = `
<div>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 1">Folder 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 2">Folder 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 3">Folder 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with folder items and title 1`] = `
<div>
  <h4 class="card-section-header">Folder Items</h4>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 1">Folder 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 2">Folder 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-directory card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <title>folder</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters">
              <div class="card-title text-truncate" title="Folder 3">Folder 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with id 1`] = `
<div id="myId">
  <ul class="card-page"></ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with image items 1`] = `
<div>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 1" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 1">Image Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 2" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 2">Image Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 3" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 3">Image Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with image items and title 1`] = `
<div>
  <h4 class="card-section-header">Image Items</h4>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 1" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 1">Image Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 2" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 2">Image Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card image-card">
        <div class="aspect-ratio card-item-first">
          <img alt="Image Item 3" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="./image1.jpg">
          <span class="sticker sticker-primary sticker-bottom-left">JPG</span>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="Image Item 3">Image Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with user items 1`] = `
<div>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CL</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 1">User Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">MC</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 2">User Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CM</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 3">User Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render a ClayGrid with user items and title 1`] = `
<div>
  <h4 class="card-section-header">User Items</h4>
  <ul class="card-page">
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CL</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 1">User Item 1</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">MC</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 2">User Item 2</div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="card-page-item-directory">
      <div class="card-type-asset card">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-primary rounded-circle sticker-xl">
              <span class="sticker-overlay">CM</span>
            </span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Item 3">User Item 3</div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ClayGrid should render the default markup 1`] = `
<div>
  <ul class="card-page"></ul>
</div>
`;
